Criei um mecanismo que verifica se a nova analise tem modificações em relação a ultima versão e mais pequenos ajustes.

--- a/arquivos_templates/projeto/projeto.html
+++ b/arquivos_templates/projeto/projeto.html
@@ -828,7 +828,7 @@ th.compact {
             url: '/projeto/analisar',
             type: 'get', //this is the default though, you don't actually need to always mention it
             success: function(data) {
-                alert(data);
+                //alert(data);
                 $('#atualizando_icone').removeClass("fa fa-spinner fa-pulse fa-1x fa-fw").hide();
                 window.location.reload();
                 //table.row('.selected').remove().draw( false );
